refactor: CRUD replace
