# api/types/pagination.pb.go
@@ -1,178 +1,0 @@
-// Code generated by protoc-gen-go. DO NOT EDIT.
-// versions:
-// 	protoc-gen-go v1.31.0
-// 	protoc        v4.23.2
-// source: types/pagination.proto
-
-package types
-
-import (
-	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
-	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
-	reflect "reflect"
-	sync "sync"
-)
-
-const (
-	// Verify that this generated code is sufficiently up-to-date.
-	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
-	// Verify that runtime/protoimpl is sufficiently up-to-date.
-	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
-)
-
-// 通用的分页信息
-type Pagination struct {
-	state         protoimpl.MessageState
-	sizeCache     protoimpl.SizeCache
-	unknownFields protoimpl.UnknownFields
-
-	Current  int32  `protobuf:"varint,1,opt,name=current,proto3" json:"current,omitempty"`
-	PageSize int32  `protobuf:"varint,2,opt,name=page_size,json=pageSize,proto3" json:"page_size,omitempty"`
-	Total    int32  `protobuf:"varint,3,opt,name=total,proto3" json:"total,omitempty"`
-	RawTotal *int64 `protobuf:"varint,4,opt,name=raw_total,json=rawTotal,proto3,oneof" json:"raw_total,omitempty"`
-}
-
-func (x *Pagination) Reset() {
-	*x = Pagination{}
-	if protoimpl.UnsafeEnabled {
-		mi := &file_types_pagination_proto_msgTypes[0]
-		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
-		ms.StoreMessageInfo(mi)
-	}
-}
-
-func (x *Pagination) String() string {
-	return protoimpl.X.MessageStringOf(x)
-}
-
-func (*Pagination) ProtoMessage() {}
-
-func (x *Pagination) ProtoReflect() protoreflect.Message {
-	mi := &file_types_pagination_proto_msgTypes[0]
-	if protoimpl.UnsafeEnabled && x != nil {
-		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
-		if ms.LoadMessageInfo() == nil {
-			ms.StoreMessageInfo(mi)
-		}
-		return ms
-	}
-	return mi.MessageOf(x)
-}
-
-// Deprecated: Use Pagination.ProtoReflect.Descriptor instead.
-func (*Pagination) Descriptor() ([]byte, []int) {
-	return file_types_pagination_proto_rawDescGZIP(), []int{0}
-}
-
-func (x *Pagination) GetCurrent() int32 {
-	if x != nil {
-		return x.Current
-	}
-	return 0
-}
-
-func (x *Pagination) GetPageSize() int32 {
-	if x != nil {
-		return x.PageSize
-	}
-	return 0
-}
-
-func (x *Pagination) GetTotal() int32 {
-	if x != nil {
-		return x.Total
-	}
-	return 0
-}
-
-func (x *Pagination) GetRawTotal() int64 {
-	if x != nil && x.RawTotal != nil {
-		return *x.RawTotal
-	}
-	return 0
-}
-
-var File_types_pagination_proto protoreflect.FileDescriptor
-
-var file_types_pagination_proto_rawDesc = []byte{
-	0x0a, 0x16, 0x74, 0x79, 0x70, 0x65, 0x73, 0x2f, 0x70, 0x61, 0x67, 0x69, 0x6e, 0x61, 0x74, 0x69,
-	0x6f, 0x6e, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x12, 0x09, 0x61, 0x70, 0x69, 0x2e, 0x74, 0x79,
-	0x70, 0x65, 0x73, 0x22, 0x89, 0x01, 0x0a, 0x0a, 0x50, 0x61, 0x67, 0x69, 0x6e, 0x61, 0x74, 0x69,
-	0x6f, 0x6e, 0x12, 0x18, 0x0a, 0x07, 0x63, 0x75, 0x72, 0x72, 0x65, 0x6e, 0x74, 0x18, 0x01, 0x20,
-	0x01, 0x28, 0x05, 0x52, 0x07, 0x63, 0x75, 0x72, 0x72, 0x65, 0x6e, 0x74, 0x12, 0x1b, 0x0a, 0x09,
-	0x70, 0x61, 0x67, 0x65, 0x5f, 0x73, 0x69, 0x7a, 0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x05, 0x52,
-	0x08, 0x70, 0x61, 0x67, 0x65, 0x53, 0x69, 0x7a, 0x65, 0x12, 0x14, 0x0a, 0x05, 0x74, 0x6f, 0x74,
-	0x61, 0x6c, 0x18, 0x03, 0x20, 0x01, 0x28, 0x05, 0x52, 0x05, 0x74, 0x6f, 0x74, 0x61, 0x6c, 0x12,
-	0x20, 0x0a, 0x09, 0x72, 0x61, 0x77, 0x5f, 0x74, 0x6f, 0x74, 0x61, 0x6c, 0x18, 0x04, 0x20, 0x01,
-	0x28, 0x03, 0x48, 0x00, 0x52, 0x08, 0x72, 0x61, 0x77, 0x54, 0x6f, 0x74, 0x61, 0x6c, 0x88, 0x01,
-	0x01, 0x42, 0x0c, 0x0a, 0x0a, 0x5f, 0x72, 0x61, 0x77, 0x5f, 0x74, 0x6f, 0x74, 0x61, 0x6c, 0x42,
-	0x40, 0x0a, 0x09, 0x61, 0x70, 0x69, 0x2e, 0x74, 0x79, 0x70, 0x65, 0x73, 0x50, 0x01, 0x5a, 0x31,
-	0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x6f, 0x6d, 0x61, 0x6c, 0x6c,
-	0x6f, 0x63, 0x2f, 0x6b, 0x72, 0x61, 0x74, 0x6f, 0x73, 0x2d, 0x63, 0x6f, 0x6e, 0x73, 0x6f, 0x6c,
-	0x65, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x74, 0x79, 0x70, 0x65, 0x73, 0x3b, 0x74, 0x79, 0x70, 0x65,
-	0x73, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
-}
-
-var (
-	file_types_pagination_proto_rawDescOnce sync.Once
-	file_types_pagination_proto_rawDescData = file_types_pagination_proto_rawDesc
-)
-
-func file_types_pagination_proto_rawDescGZIP() []byte {
-	file_types_pagination_proto_rawDescOnce.Do(func() {
-		file_types_pagination_proto_rawDescData = protoimpl.X.CompressGZIP(file_types_pagination_proto_rawDescData)
-	})
-	return file_types_pagination_proto_rawDescData
-}
-
-var file_types_pagination_proto_msgTypes = make([]protoimpl.MessageInfo, 1)
-var file_types_pagination_proto_goTypes = []interface{}{
-	(*Pagination)(nil), // 0: api.types.Pagination
-}
-var file_types_pagination_proto_depIdxs = []int32{
-	0, // [0:0] is the sub-list for method output_type
-	0, // [0:0] is the sub-list for method input_type
-	0, // [0:0] is the sub-list for extension type_name
-	0, // [0:0] is the sub-list for extension extendee
-	0, // [0:0] is the sub-list for field type_name
-}
-
-func init() { file_types_pagination_proto_init() }
-func file_types_pagination_proto_init() {
-	if File_types_pagination_proto != nil {
-		return
-	}
-	if !protoimpl.UnsafeEnabled {
-		file_types_pagination_proto_msgTypes[0].Exporter = func(v interface{}, i int) interface{} {
-			switch v := v.(*Pagination); i {
-			case 0:
-				return &v.state
-			case 1:
-				return &v.sizeCache
-			case 2:
-				return &v.unknownFields
-			default:
-				return nil
-			}
-		}
-	}
-	file_types_pagination_proto_msgTypes[0].OneofWrappers = []interface{}{}
-	type x struct{}
-	out := protoimpl.TypeBuilder{
-		File: protoimpl.DescBuilder{
-			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
-			RawDescriptor: file_types_pagination_proto_rawDesc,
-			NumEnums:      0,
-			NumMessages:   1,
-			NumExtensions: 0,
-			NumServices:   0,
-		},
-		GoTypes:           file_types_pagination_proto_goTypes,
-		DependencyIndexes: file_types_pagination_proto_depIdxs,
-		MessageInfos:      file_types_pagination_proto_msgTypes,
-	}.Build()
-	File_types_pagination_proto = out.File
-	file_types_pagination_proto_rawDesc = nil
-	file_types_pagination_proto_goTypes = nil
-	file_types_pagination_proto_depIdxs = nil
-}
